# chat

./: LICENSE  README.md  chat.cabal  stack.yaml
app/: Client.hs  Main.hs
