name:                chat
version:             0.1.0.0
synopsis:            TODO Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/rob-b/chat
license:             BSD3
license-file:        LICENSE
author:              Rob Berry
maintainer:          example@example.com
copyright:           Copyright: (c) 2016 Rob Berry
category:            Acme
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

executable client
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Client.hs
  build-depends:       base
                     , websockets
                     , mtl
                     , network
                     , text

executable chat
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , websockets
                     , text
                     , bytestring
                     , stringsearch
                     , wai-websockets
                     , warp

source-repository head
  type:     git
  location: https://github.com/rob-b/chat
